Update papers pages

--- a/pages/program/papers/le20.md
+++ b/pages/program/papers/le20.md
@@ -36,18 +36,19 @@ title: "A Fully Convolutional Normalization Approach of Head and Neck Cancer Out
 }
 </style>
 
-# [A Fully Convolutional Normalization Approach of Head and Neck Cancer Outcome Prediction](https://chat.midl.io/channel/S145)
+{% from "_macros.html" import button %}
 
-##### William Le,Francisco Perdigón Romero,Samuel Kadoury
-###### Keywords: KEYWORDS
+# S145 - A Fully Convolutional Normalization Approach of Head and Neck Cancer Outcome Prediction
 
-<!-- ### Abstract -->
+
+##### William Le, Francisco Perdigón Romero, Samuel Kadoury
+
 <center><a class="toggle_visibility" data-selector=".paper_abstract" data-level="3">Abstract</a>
         - <a href="https://openreview.net/forum?id=JojEzQ3E5n">Reviews</a>
         - <a class="toggle_visibility" data-selector=".paper_qa" data-level="3">Schedule</a>
 
 <span class="paper_abstract">
-        Medical image classification performance worsens in multi-domain datasets, caused by radiological image differences across institutions, scanner manufacturer, model and operator. Deep learning is well-suited for learning image features with priors encoded as constraints during the training process.  In this work, we apply a ResNeXt classification network augmented with an FCN preprocessor subnetwork to a public TCIA head and neck cancer dataset. The training goal is survival prediction of radiotherapy cases based on pre-treatment FDG-PET/CT scans, acquired across 4 different hospitals.  We show that the preprocessor sub-network acts as a embedding normalizer and improves over state-of-the-art results of 70% AUC to 76%.
+        'Medical image classification performance worsens in multi-domain datasets, caused by radiological image differences across institutions, scanner manufacturer, model and operator. Deep learning is well-suited for learning image features with priors encoded as constraints during the training process.  In this work, we apply a ResNeXt classification network augmented with an FCN preprocessor subnetwork to a public TCIA head and neck cancer dataset. The training goal is survival prediction of radiotherapy cases based on pre-treatment FDG-PET/CT scans, acquired across 4 different hospitals.  We show that the preprocessor sub-network acts as a embedding normalizer and improves over state-of-the-art results of 70% AUC to 76%.'
         <span class="actions">
   <br/>
   <a class="toggle_visibility" data-level="2">Hide abstract</a></span>
@@ -58,6 +59,8 @@ title: "A Fully Convolutional Normalization Approach of Head and Neck Cancer Out
         <br/>
         <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
 </span>
+
+{{ button("Access paper channel", "https://chat.midl.io/channel/S145") }}
 
 ---
 
