--- a/pages/program/papers/li20.md
+++ b/pages/program/papers/li20.md
@@ -36,18 +36,19 @@ title: "Generating Fundus Fluorescence Angiography Images from Structure Fundus 
 }
 </style>
 
-# [Generating Fundus Fluorescence Angiography Images from Structure Fundus Images Using Generative Adversarial Networks](https://chat.midl.io/channel/P333)
+{% from "_macros.html" import button %}
 
-##### Wanyue Li,Wen Kong,Yiwei Chen,Jing Wang,Yi He,Guohua Shi,Guohua Deng
-###### Keywords: KEYWORDS
+# P333 - Generating Fundus Fluorescence Angiography Images from Structure Fundus Images Using Generative Adversarial Networks
 
-<!-- ### Abstract -->
+
+##### Wanyue Li, Wen Kong, Yiwei Chen, Jing Wang, Yi He, Guohua Shi, Guohua Deng
+
 <center><a class="toggle_visibility" data-selector=".paper_abstract" data-level="3">Abstract</a>
         - <a href="https://openreview.net/forum?id=qhZM390B4">Reviews</a>
         - <a class="toggle_visibility" data-selector=".paper_qa" data-level="3">Schedule</a>
 
 <span class="paper_abstract">
-        Fluorescein angiography can provide a map of retinal vascular structure and function, which is commonly used in ophthalmology diagnosis, however, this imaging modality may pose risks of harm to the patients. To help physicians reduce the potential risks of diagnosis, an image translation method is adopted. In this work, we proposed a conditional generative adversarial network (GAN)-based method to directly learn the mapping relationship between structure fundus images and fundus fluorescence angiography (FFA) images. Moreover, local saliency maps, which define each pixel’s importance, are used to define a novel saliency loss in the GAN cost function. This facilitates more accurate learning of small-vessel and fluorescein leakage features. The proposed method was validated on our dataset and the publicly available Isfahan MISP dataset with the metrics of peak signal-to-noise ratio (PSNR) and structural similarity (SSIM). The experimental results indicate that the proposed method can accurately generate both retinal vascular and fluorescein leakage structures, which has great practical significance for clinical diagnosis and analysis.
+        'Fluorescein angiography can provide a map of retinal vascular structure and function, which is commonly used in ophthalmology diagnosis, however, this imaging modality may pose risks of harm to the patients. To help physicians reduce the potential risks of diagnosis, an image translation method is adopted. In this work, we proposed a conditional generative adversarial network (GAN)-based method to directly learn the mapping relationship between structure fundus images and fundus fluorescence angiography (FFA) images. Moreover, local saliency maps, which define each pixel’s importance, are used to define a novel saliency loss in the GAN cost function. This facilitates more accurate learning of small-vessel and fluorescein leakage features. The proposed method was validated on our dataset and the publicly available Isfahan MISP dataset with the metrics of peak signal-to-noise ratio (PSNR) and structural similarity (SSIM). The experimental results indicate that the proposed method can accurately generate both retinal vascular and fluorescein leakage structures, which has great practical significance for clinical diagnosis and analysis.'
         <span class="actions">
   <br/>
   <a class="toggle_visibility" data-level="2">Hide abstract</a></span>
@@ -58,6 +59,8 @@ title: "Generating Fundus Fluorescence Angiography Images from Structure Fundus 
         <br/>
         <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
 </span>
+
+{{ button("Access paper channel", "https://chat.midl.io/channel/P333") }}
 
 ---
 
