--- a/pages/program/papers/wu20.md
+++ b/pages/program/papers/wu20.md
@@ -36,18 +36,19 @@ title: "Improving the Ability of Deep Networks to Use Information From Multiple 
 }
 </style>
 
-# [Improving the Ability of Deep Networks to Use Information From Multiple Views in Breast Cancer Screening](https://chat.midl.io/channel/P158)
+{% from "_macros.html" import button %}
 
-##### Nan Wu,Stanisław Jastrzębski,Jungkyu Park,Linda Moy,Kyunghyun Cho,Krzysztof J. Geras
-###### Keywords: KEYWORDS
+# P158 - Improving the Ability of Deep Networks to Use Information From Multiple Views in Breast Cancer Screening
 
-<!-- ### Abstract -->
+
+##### Nan Wu, Stanisław Jastrzębski, Jungkyu Park, Linda Moy, Kyunghyun Cho, Krzysztof J. Geras
+
 <center><a class="toggle_visibility" data-selector=".paper_abstract" data-level="3">Abstract</a>
         - <a href="https://openreview.net/forum?id=aD86B9pZ6u">Reviews</a>
         - <a class="toggle_visibility" data-selector=".paper_qa" data-level="3">Schedule</a>
 
 <span class="paper_abstract">
-        In breast cancer screening, radiologists make the diagnosis based on images that are taken from two angles. Inspired by this, we seek to improve the performance of deep neural networks applied to this task by encouraging the model to use information from both views of the breast. First, we take a closer look at the training process and observe an imbalance between learning from the two views. In particular, we observe that parameters of the layers processing one of the views have larger gradient norms and contribute more to the overall loss reduction. Next, we test several methods targeted at utilizing both views more equally in training. We find that using the same weights to process both views, or using a technique called modality dropout, leads to a boost in performance. Looking forward, our results indicate improving learning dynamics as a promising avenue for improving utilization of multiple views in deep neural networks for medical diagnosis.
+        'In breast cancer screening, radiologists make the diagnosis based on images that are taken from two angles. Inspired by this, we seek to improve the performance of deep neural networks applied to this task by encouraging the model to use information from both views of the breast. First, we take a closer look at the training process and observe an imbalance between learning from the two views. In particular, we observe that parameters of the layers processing one of the views have larger gradient norms and contribute more to the overall loss reduction. Next, we test several methods targeted at utilizing both views more equally in training. We find that using the same weights to process both views, or using a technique called modality dropout, leads to a boost in performance. Looking forward, our results indicate improving learning dynamics as a promising avenue for improving utilization of multiple views in deep neural networks for medical diagnosis.'
         <span class="actions">
   <br/>
   <a class="toggle_visibility" data-level="2">Hide abstract</a></span>
@@ -58,6 +59,8 @@ title: "Improving the Ability of Deep Networks to Use Information From Multiple 
         <br/>
         <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
 </span>
+
+{{ button("Access paper channel", "https://chat.midl.io/channel/P158") }}
 
 ---
 
