--- a/pages/program/papers/yu20.md
+++ b/pages/program/papers/yu20.md
@@ -36,18 +36,19 @@ title: "An Auto-Encoder Strategy for Adaptive Image Segmentation"
 }
 </style>
 
-# [An Auto-Encoder Strategy for Adaptive Image Segmentation](https://chat.midl.io/channel/P103)
+{% from "_macros.html" import button %}
 
-##### Evan M. Yu,Juan Eugenio Iglesias,Adrian V. Dalca,Mert R. Sabuncu
-###### Keywords: KEYWORDS
+# P103 - An Auto-Encoder Strategy for Adaptive Image Segmentation
 
-<!-- ### Abstract -->
+
+##### Evan M. Yu, Juan Eugenio Iglesias, Adrian V. Dalca, Mert R. Sabuncu
+
 <center><a class="toggle_visibility" data-selector=".paper_abstract" data-level="3">Abstract</a>
         - <a href="https://openreview.net/forum?id=J1-4vNudWo">Reviews</a>
         - <a class="toggle_visibility" data-selector=".paper_qa" data-level="3">Schedule</a>
 
 <span class="paper_abstract">
-        Deep neural networks are powerful tools for biomedical image segmentation. These models are often trained with heavy supervision, relying on pairs of images and corresponding voxel-level labels. However, obtaining segmentations of anatomical regions on a large number of cases can be prohibitively expensive. Thus there is a strong need for deep learning-based segmentation tools that do not require heavy supervision and can continuously adapt. In this paper, we propose a novel perspective of segmentation as a discrete representation learning problem, and present a variational autoencoder segmentation strategy that is flexible and adaptive. Our method, called Segmentation Auto-Encoder (SAE), leverages all available unlabeled scans and merely requires a segmentation prior, which can be a single unpaired segmentation image. In experiments, we apply SAE to brain MRI scans. Our results show that SAE can produce good quality segmentations, particularly when the prior is good. We demonstrate that a Markov Random Field prior can yield significantly better results than a spatially independent prior. Our code is freely available at https://github.com/evanmy/sae. 
+        'Deep neural networks are powerful tools for biomedical image segmentation. These models are often trained with heavy supervision, relying on pairs of images and corresponding voxel-level labels. However, obtaining segmentations of anatomical regions on a large number of cases can be prohibitively expensive. Thus there is a strong need for deep learning-based segmentation tools that do not require heavy supervision and can continuously adapt. In this paper, we propose a novel perspective of segmentation as a discrete representation learning problem, and present a variational autoencoder segmentation strategy that is flexible and adaptive. Our method, called Segmentation Auto-Encoder (SAE), leverages all available unlabeled scans and merely requires a segmentation prior, which can be a single unpaired segmentation image. In experiments, we apply SAE to brain MRI scans. Our results show that SAE can produce good quality segmentations, particularly when the prior is good. We demonstrate that a Markov Random Field prior can yield significantly better results than a spatially independent prior. Our code is freely available at https://github.com/evanmy/sae. '
         <span class="actions">
   <br/>
   <a class="toggle_visibility" data-level="2">Hide abstract</a></span>
@@ -58,6 +59,8 @@ title: "An Auto-Encoder Strategy for Adaptive Image Segmentation"
         <br/>
         <span class="actions"><a class="toggle_visibility" data-level="2">Hide schedule</a></span>
 </span>
+
+{{ button("Access paper channel", "https://chat.midl.io/channel/P103") }}
 
 ---
 
