Update papers template

--- a/pages/program/papers/le20.md
+++ b/pages/program/papers/le20.md
@@ -1,47 +1,14 @@
 ---
 title: "A Fully Convolutional Normalization Approach of Head and Neck Cancer Outcome Prediction"
+page_class: "paper-page"
 ---
-<style>
-.paper_abstract {
-  display: none;
-  font-size: 90%;
-  line-height: 1.35;
-  text-align: justify;
-  margin-top: 4px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 4px;
-
-  .actions {
-    display: block;
-    text-align: center;
-    margin-top: 4px;
-  }
-}
-
-.paper_qa {
-  display: none;
-  line-height: 1.35;
-  text-align: center;
-  margin-top: 4px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 4px;
-
-  .actions {
-    display: block;
-    text-align: center;
-    margin-top: 4px;
-  }
-}
-</style>
 
 {% from "_macros.html" import button %}
 
 # S145 - A Fully Convolutional Normalization Approach of Head and Neck Cancer Outcome Prediction
 
 
-##### William Le, Francisco Perdigón Romero, Samuel Kadoury
+### William Le, Francisco Perdigón Romero, Samuel Kadoury
 
 <center><a class="toggle_visibility" data-selector=".paper_abstract" data-level="3">Abstract</a>
         - <a href="https://openreview.net/forum?id=JojEzQ3E5n">Reviews</a>
