--- a/pages/program/papers/du20.md
+++ b/pages/program/papers/du20.md
@@ -1,47 +1,14 @@
 ---
 title: "3D-RADNet: Extracting labels from DICOM metadata for training general medical domain deep 3D convolution neural networks"
+page_class: "paper-page"
 ---
-<style>
-.paper_abstract {
-  display: none;
-  font-size: 90%;
-  line-height: 1.35;
-  text-align: justify;
-  margin-top: 4px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 4px;
-
-  .actions {
-    display: block;
-    text-align: center;
-    margin-top: 4px;
-  }
-}
-
-.paper_qa {
-  display: none;
-  line-height: 1.35;
-  text-align: center;
-  margin-top: 4px;
-  padding-left: 20px;
-  padding-right: 20px;
-  padding-bottom: 4px;
-
-  .actions {
-    display: block;
-    text-align: center;
-    margin-top: 4px;
-  }
-}
-</style>
 
 {% from "_macros.html" import button %}
 
 # P114 - 3D-RADNet: Extracting labels from DICOM metadata for training general medical domain deep 3D convolution neural networks
 
 
-##### Richard Du, Varut Vardhanabhuti
+### Richard Du, Varut Vardhanabhuti
 
 <center><a class="toggle_visibility" data-selector=".paper_abstract" data-level="3">Abstract</a>
         - <a href="https://openreview.net/forum?id=CCbuElJreP">Reviews</a>
