--- a/pages/papers/yi20.md
+++ b/pages/papers/yi20.md
@@ -14,7 +14,7 @@ page_class: "paper"
 - <a class="toggle_visibility" data-selector=".schedule" data-level="3">Show schedule</a>
 - <a href="https://openreview.net/pdf?id=55VoQFvQM">Paper</a>
 - <a href="https://openreview.net/forum?id=55VoQFvQM">Reviews</a>
-{{ teaser('') }}
+{{ teaser('i88RD3VDwTs') }}
 
 <p>
     <span class="abstract">
@@ -41,3 +41,4 @@ page_class: "paper"
 
 ---
 
+{{ presentation('79xqFZ0aRN8', '/slides/yi20.pdf', 720, 450) }}
