Update link for teasers in page

--- a/pages/papers/le20.md
+++ b/pages/papers/le20.md
@@ -41,4 +41,4 @@ page_class: "paper"
 
 ---
 
-{{ presentation('OD-lmWkCr4A', '/slides/le20.pdf', 720, 450) }}
+{{ presentation('JXM-25mYIh0', '/slides/le20.pdf', 720, 450) }}
