--- a/pages/papers/um20.md
+++ b/pages/papers/um20.md
@@ -41,4 +41,4 @@ page_class: "paper"
 
 ---
 
-{{ presentation('wmUgVsE_w38', '/slides/um20.pdf', 720, 450) }}
+{{ presentation('3VXeqFs5AWU', '/slides/um20.pdf', 720, 450) }}
