Update title pages for the few papers

--- a/pages/papers/wu20.md
+++ b/pages/papers/wu20.md
@@ -1,11 +1,11 @@
 ---
-title: "Improving the Ability of Deep Networks to Use Information From Multiple Views in Breast Cancer Screening"
+title: "Improving the Ability of Deep Neural Networks to Use Information from Multiple Views in Breast Cancer Screening"
 page_class: "paper"
 ---
 
 {% from "_macros.html" import presentation, button, teaser, youtube %}
 
-# P158 - Improving the Ability of Deep Networks to Use Information From Multiple Views in Breast Cancer Screening
+# P158 - Improving the Ability of Deep Neural Networks to Use Information from Multiple Views in Breast Cancer Screening
 
 #### Nan Wu, Stanisław Jastrzębski, Jungkyu Park, Linda Moy, Kyunghyun Cho, Krzysztof J. Geras
 
